// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add and delete a module in a batch 1`] = `
"
/*** begin A (add 1 and 2) ***/
/*** end A (add 1 and 2) ***/


/*** begin B (delete 2) ***/
/*** end B (delete 2) ***/


/* 1.js */
  function 1_A() {}"
`;

exports[`can apply updates individually and in a batch: 1: run updates as they arrive 1`] = `
"
/*** begin A (add 1, 2, and 3) ***/
/* 1.js */
  function 1_A() {}
/* 2.js */
  function 2_A() {}
/* 3.js */
  function 3_A() {}
/*** end A (add 1, 2, and 3) ***/


/*** begin B (add 4, edit 3 and 1) ***/
/* 4.js */
  function 4_B() {}
/* 3.js */
  function 3_B() {}
/* 1.js */
  function 1_B() {}
/*** end B (add 4, edit 3 and 1) ***/


/*** begin C (edit 2, delete 3) ***/
/* 2.js */
  function 2_C() {}
/*** end C (edit 2, delete 3) ***/


/*** begin D (delete 1, add 3) ***/
/* 3.js */
  function 3_D() {}
/*** end D (delete 1, add 3) ***/


/*** begin E (edit 2 and 3) ***/
/* 2.js */
  function 2_E() {}
/* 3.js */
  function 3_E() {}
/*** end E (edit 2 and 3) ***/

"
`;

exports[`can apply updates individually and in a batch: 2: ignore updates 1`] = `
"
/*** begin A (add 1, 2, and 3) ***/
/*** end A (add 1, 2, and 3) ***/


/*** begin B (add 4, edit 3 and 1) ***/
/*** end B (add 4, edit 3 and 1) ***/


/*** begin C (edit 2, delete 3) ***/
/*** end C (edit 2, delete 3) ***/


/*** begin D (delete 1, add 3) ***/
/*** end D (delete 1, add 3) ***/


/*** begin E (edit 2 and 3) ***/
/*** end E (edit 2 and 3) ***/

"
`;

exports[`can apply updates individually and in a batch: 3: apply updates in a batch 1`] = `
"
/* 2.js */
  function 2_E() {}
/* 4.js */
  function 4_B() {}
/* 3.js */
  function 3_E() {}"
`;

exports[`can delete and re-add a module in a batch 1`] = `
"
/*** begin A (delete 2) ***/
/*** end A (delete 2) ***/


/*** begin B (add 1 and 2) ***/
/*** end B (add 1 and 2) ***/


/* 1.js */
  function 1_B() {}
/* 2.js */
  function 2_B() {}"
`;

exports[`can enable and disable the client to batch updates 1`] = `
"
/*** begin A (add 1, 2, and 3) ***/
/* 1.js */
  function 1_A() {}
/* 2.js */
  function 2_A() {}
/* 3.js */
  function 3_A() {}
/*** end A (add 1, 2, and 3) ***/


/*** begin B (add 4, edit 3 and 1) ***/
/*** end B (add 4, edit 3 and 1) ***/


/*** begin C (edit 2, delete 3) ***/
/*** end C (edit 2, delete 3) ***/


/* 4.js */
  function 4_B() {}
/* 1.js */
  function 1_B() {}
/* 2.js */
  function 2_C() {}
/*** begin D (delete 1, add 3) ***/
/*** end D (delete 1, add 3) ***/


/*** begin E (edit 2 and 3) ***/
/*** end E (edit 2 and 3) ***/


/* 3.js */
  function 3_E() {}
/* 2.js */
  function 2_E() {}"
`;
